--- a/admin-giris.html
+++ b/admin-giris.html
@@ -13,6 +13,7 @@
 	<link href="css/bootflat.min.css" rel="stylesheet">
 	<link href="css/icheck/blue.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
+	<!-- something -->
 	<!-- #Head# -->
 </head>
 <body>
